--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <div id="header">
     <% if user_signed_in? %>
       <%= current_user.email if current_user %>
+      <%= link_to "Need support?", new_report_path %>
       |
       <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
     <% else %>
@@ -17,6 +18,8 @@
       |
       <%= link_to "Sign up", new_user_registration_path %>
     <% end %>
+    |
+    <%= link_to "New messages", reports_path %>
   </div>
 
 <%= yield %>
